# tmax

./: .gitignore  EXPERIMENTS.md  README.md  RESULTS.md  TUA_BENCH_DAYTONA.md  _tua_base.sh  _tua_tmax.sh  chain_base_eval.sh  clean_relaunch_tbpro.sh  cleanup_daytona.py  cleanup_restart9b.sh  eval_harbor.py  fix_and_queue.sh  lb_proxy.py  manage_access_dates.py  manual_convert_step100.py  monitor_eval.sh  pyproject.toml  relaunch_tb21_base.sh  relaunch_tbpro_base.sh  relaunch_tbpro_patched.sh  restart_k5.sh  restart_serve8b.sh  restart_serve9b_v2.sh  run_27b_k5.sh  run_27b_otherbench.sh  run_8gpu.sh  run_9b.sh  run_bench_queue.sh  run_eval_9b_overnight.sh  run_eval_9b_v2.sh  run_eval_9b_v3.sh  run_final_compare.sh  run_k5.sh  run_smoke.sh  run_step100_bench.sh  run_step100_bench2.sh  run_step100_eval.sh  run_tblite.sh  run_tua_dual.sh  (+23 more)
TassieAgent/: agent.py
Vanillux2Agent/: __init__.py  agent.py
beaker_configs/: launch_eval.sh  vllm_serve.yaml
rl_data/: README.md  analyze.py  generate_solutions.py  generate_tasks.py  upload_to_hf.py
rl_data/comparison/: __init__.py  cli.py  command_taxonomy.py  core.py  modules.py  taxonomy_classifier.py
rl_data/containers/: base_data_processing.def  base_data_querying.def  base_data_science.def  base_debugging.def  base_file_operations.def  base_intricate.def  base_scientific_computing.def  base_security.def  base_software_engineering.def  build_bases.sh  (+1 more)
scripts/: publish_tmax15k.sh  run_rldata_claude.sh  run_rldata_claude_test.sh  run_swebench.sh  run_tb2.sh  run_tblite.sh  run_tmax15k_smoke.sh
sft/: train.py
(+78 files in other folders)
