[project]
name = "tmax"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "harbor",
    "litellm",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sft", "TassieAgent"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
flash-linear-attention = ["torch", "ninja"]

[project.optional-dependencies]
sft = [
    "trl>=0.29.0",
    "transformers>=5.2.0",
    "accelerate>=1.12.0",
    "datasets>=4.6.1",
    "pyarrow>=23.0.1",
    "torch==2.8.0",
    "tensorboard",
    "wandb",
    "causal-conv1d @ https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.0/causal_conv1d-1.6.0+cu12torch2.8cxx11abiTRUE-cp313-cp313-linux_x86_64.whl",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp313-cp313-linux_x86_64.whl",
    "flash-linear-attention>=0.4.1",
    "deepspeed>=0.18.7",
]
